<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/title_bar"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="16dp"
                android:text="@string/filter"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/filter_info"
                android:layout_marginTop="5dp"
                android:textSize="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Switch
            android:id="@+id/filter_shortvideo_state"
            android:theme="@style/SwitchBarStyle"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="5"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/black"
                android:text="@string/open_list"
                android:layout_marginTop="16dp"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/open_list_info"
                android:layout_marginTop="4dp"
                android:textSize="14dp"
                android:layout_marginBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Switch
            android:id="@+id/iv_open_play_list"
            android:theme="@style/SwitchBarStyle"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <View
        android:background="#10C4C4C4"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="16dp"
            android:text="@string/loop_play"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content" />
        <Switch
            android:id="@+id/loop_state"
            android:theme="@style/SwitchBarStyle"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</LinearLayout>